--- a/UI/hy/css/style.css
+++ b/UI/hy/css/style.css
@@ -291,6 +291,13 @@ table.display{
     color: black;
     text-shadow: none;
 }*/
+td.details-control {
+    background: url('https://datatables.net/examples/resources/details_open.png') no-repeat center center;
+    cursor: pointer;
+}
+tr.shown td.details-control {
+    background: url('https://datatables.net/examples/resources/details_close.png') no-repeat center center;
+}
 
 table.display tbody tr.even:hover, #table_id1 tbody tr.even td.highlighted {
     background-color: #ECFFB3;
