--- a/UI/hy/newSmapleSetup/style/basis.css
+++ b/UI/hy/newSmapleSetup/style/basis.css
@@ -93,6 +93,17 @@ html, body {
 	overflow:hidden;
 }
 
+.blockS.nblockS * {
+	
+	float: auto;
+	border-style: auto;
+	transition: auto;
+	width: auto;
+	height: auto;
+	font-size: 0.3cm;
+	text-align: auto;
+	overflow:auto;
+}
 
 .blockS .scroll {
 	overflow: auto;
