Update UI logic to hide state machine graph and hookup canvas draw

--- a/UI/hy/newSmapleSetup/style/sp_style.css
+++ b/UI/hy/newSmapleSetup/style/sp_style.css
@@ -30,6 +30,20 @@ body.sp_Style.blockS  {
 }
 
 
+
+.sp_Style.blockS .SMGraph{
+  top: 50%;
+  opacity: 1;
+  transition:opacity 0.5s, transform ease-out 0.3s;
+  transform: translate(-0%,-50%);
+}
+.sp_Style.blockS .SMGraph.hide{
+  opacity: 0.3;
+  transform: translate(-98%,-50%);
+}
+
+
+
 .sp_Style.blockS .sideCtrl{
   transition:opacity 0.5s, transform ease-out 0.3s;
 }
