--- a/UI/WebUI/style/sp_style.css
+++ b/UI/WebUI/style/sp_style.css
@@ -18,7 +18,7 @@ body.sp_Style.blockS  {
   background: #EAEBEE;
 }
 .sp_Style.blockS *.shadow1 {
-  box-shadow:0 0px 3px rgba(0,0,0,0.5);
+  box-shadow:5px 10px 13px rgba(10,10,10,0.3);
 }
 
 .sp_Style.blockS .radarScanPanel {
