--- a/UI/WebUI/style/basis.css
+++ b/UI/WebUI/style/basis.css
@@ -227,7 +227,7 @@ margin:auto; float: none;
 
 	height: 10px;
 }
-.blockS .input,.blockS input {
+.blockS .input{
 	box-shadow: inset 0 -5px 0 black, inset 2px 0px 0 black;
 
 	padding-left: 5px;
