Add optional tag input logic Don't reset the option Tag when load new deffile Let tag info as string array and safe the array into deffile Make optional tag input able to set multiple tags. exp: "A,B,C"

--- a/UI/WebUI/style/sp_style.css
+++ b/UI/WebUI/style/sp_style.css
@@ -56,7 +56,9 @@ body.sp_Style.blockS  {
   transform: translate(-90%,-50%);
 }
 
-
+.sp_Style .ant-input-affix-wrapper.error input{
+  background-color: #f99;
+} 
 
 .sp_Style.blockS .MenuAnim{
   transition:opacity 0.2s, transform 0.3s;
