--- a/UI/WebUI/style/basis.css
+++ b/UI/WebUI/style/basis.css
@@ -9,7 +9,7 @@ html, body {
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 .body {
 	overflow: scroll;
@@ -105,7 +105,13 @@ html, body {
 	font-weight:bold;
 	box-sizing: border-box;
 	color:#FFF;
-	overflow:hidden;
+  overflow:hidden;
+  
+
+  -webkit-user-select: none; /* webkit (safari, chrome) browsers */
+  -moz-user-select: none; /* mozilla browsers */
+  -khtml-user-select: none; /* webkit (konqueror) browsers */
+  -ms-user-select: none; /* IE10+ */
 }
 
 
