--- a/UI/WebUI/style/sp_style.css
+++ b/UI/WebUI/style/sp_style.css
@@ -29,6 +29,18 @@ div.error > textarea{
 }
 
 /*Start of ANT COlor*/
+
+
+.icon_btn > span>svg{ padding-left: 2px; width: 30px;height: 100%;}
+.icon_btn >span{
+  float: left;
+	border-style: none;
+  box-sizing: border-box;
+  position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
 .iconButtonSize > svg{ padding-left: 2px; width: 30px;height: 100%;}
 .iconTextPadding {padding-left: 5px;}
 .blockS .palatte-blue-1{background:#e6f7ff}
@@ -77,7 +89,7 @@ body.sp_Style.blockS  {
 }
 .sp_Style.blockS .SMGraph.hide{
   opacity: 0.1;
-  transform: translate(-90%,-50%);
+  transform: translate(-95%,50%);
 }
 
 .sp_Style .ant-input-affix-wrapper.error input{
