--- a/UI/WebUI/style/sp_style.css
+++ b/UI/WebUI/style/sp_style.css
@@ -10,6 +10,47 @@
   animation: NAME-YOUR-ANIMATION 1s infinite;  /* IE 10+, Fx 29+ */
 }
 
+
+.xception-theme .theme-color_1 {
+  color:#82CBCB;
+
+}
+
+
+.xception-theme .theme_color_2 {
+  color:#5191a5;
+}
+
+
+
+.HW100{
+  width:100px  !important;
+  height:100px !important;
+}
+.HW50{
+  width:50px  !important;
+  height:50px !important;
+}
+
+.antd-icon-sizing button{
+  width:100% !important;
+  height:100% !important;
+}
+.antd-icon-sizing span{
+  width:100%;
+  height:100%;
+}
+
+.antd-icon-sizing span>svg{
+  width:100%;
+  height:100%;
+}
+
+
+
+
+
+
 div.error > textarea{
   background-color:#fff1f0;
 }
@@ -171,6 +212,34 @@ body.sp_Style.blockS  {
   font-size: 30pt;
   margin:0;
 }
+
+
+.ant-carousel_Con_WH100 .ant-carousel{
+  width: 100%;
+  height: 100%;
+}
+
+
+.ant-carousel_Con_WH100 .slick-list{
+  width: 100%;
+  height: 100%;
+}
+
+.ant-carousel_Con_WH100 .slick-track{
+  width: 100%;
+  height: 100%;
+}
+
+
+.ant-carousel_Con_WH100 .slick-slide>div{
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
+
 .small_padding_card .ant-card-body{
   padding:5px;
 }
