WebUI: feature add btn color with animation

--- a/UI/WebUI/style/sp_style.css
+++ b/UI/WebUI/style/sp_style.css
@@ -86,7 +86,10 @@
 }
 
 
-
+.blockS div.gridBtn{
+  width:50px;
+  height:50px;
+}
 
 
 div.error > textarea{
@@ -414,4 +417,47 @@ body.sp_Style.blockS  {
 .sp_Style.blockS .sysAPPBtn{
 
 	transition: transform ease-out 0.5s;
+}
+
+
+
+
+.sp_Style .btn-swipe {
+  position: relative;
+  /* background-color: #000; */
+  z-index: 0;
+  overflow: hidden;
+  transition: color 0.3s cubic-bezier(0, .25, .5, 1);
+  color: #000;
+}
+
+.sp_Style .btn-swipe.no-bg {
+  background: none;
+  box-shadow: inset 0 0 0 2px #fff;
+}
+
+.sp_Style .btn-swipe:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  width: 120%;
+  /* transform: translateX(-5%); */
+  transform: skewX(-45deg) translateX(-15%);
+  transition: all 0.3s cubic-bezier(0, .25, .5, 1);
+  background-color: #EEE;
+
+}
+
+.sp_Style .btn-swipe:hover::before,
+.sp_Style .btn-swipe:active::before {
+  /* transform: translateX(-100%) scaleX(1.35); */
+  transform: skewX(0deg) translateX(-140%) scaleX(1.35);
+}
+
+.sp_Style .btn-swipe:hover,
+.sp_Style .btn-swipe:active {
+  color: #FFF;
 }
