--- a/UI/WebUI/style/basis.css
+++ b/UI/WebUI/style/basis.css
@@ -55,6 +55,12 @@ html, body {
 	left: 50%;
 	transform: translate(-50%,-50%);
 }
+.veleXY90 {
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
 
 .vbox:before {/*invisible trick*/
 	content: '';
