--- a/UI/WebUI/style/sp_style.css
+++ b/UI/WebUI/style/sp_style.css
@@ -16,6 +16,13 @@
 }
 
 
+.xception-theme .theme_color_dark {
+  color:#667a7f;
+}
+.xception-theme .theme_background_dark {
+  background:#667a7f;
+}
+
 .mainui_mode_select>.img{
   filter: blur(4px) saturate(0.1);
   transform: scale(1.1);
@@ -519,4 +526,69 @@ body.sp_Style.blockS  {
 .sp_Style .btn-swipe:hover,
 .sp_Style .btn-swipe:active {
   color: #FFF;
+}
+
+
+
+.neumorphic {
+  box-shadow: 12px 12px 24px 0 rgba(0, 0, 0, 0.2),
+    -12px -12px 24px 0 rgba(255, 255, 255, 0.5),
+    inset 0px 0px 0px 0 rgba(0, 0, 0, 0.2),
+      inset 0px 0px 0px 0 rgba(255, 255, 255, 0.5);
+  font-size: 5rem;
+  width: 200px;
+  height: 200px;
+  border-radius: 40px;
+  overflow: hidden;
+  padding: 1.3rem;
+  display: flex;
+  transition: box-shadow 0.1s ease-in-out;
+}
+
+.neumorphic:hover {
+  box-shadow: 0px 0px 0px 0 rgba(0, 0, 0, 0.2),
+  0px 0px 0px 0 rgba(255, 255, 255, 0.5),
+  inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+  inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+}
+
+.variation2 {
+  justify-content: space-around;
+  align-items: center;
+  margin: 50px;
+  float:left;
+}
+
+.variation2 span {
+  display: block;
+  padding-bottom: 1.5rem;
+  position: relative;
+  font-size: 2rem;
+  color: #667a7f;
+  transition: color 0.1s ease-in-out;
+}
+
+.variation2 span::after {
+  color: #5e5e5e;
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  height: 0.3rem;
+  border-radius: 1rem;
+  width: 50%;
+  margin: 0 auto;
+  background-color: currentColor;
+  transition: color 0.1s ease-in-out;
+}
+
+
+.variation2:hover span {
+  color: #5191a5;
+}
+
+.variation2:hover span:after {
+  color: #80e1ff;
 }
