--- a/UI/WebUI/style/sp_style.css
+++ b/UI/WebUI/style/sp_style.css
@@ -546,6 +546,13 @@ body.sp_Style.blockS  {
 }
 
 .neumorphic:hover {
+  box-shadow: 6px 6px 12px 0 rgba(0, 0, 0, 0.2),
+  -6px -6px 12px 0 rgba(255, 255, 255, 0.5),
+  inset 1px 1px 3px 0 rgba(0, 0, 0, 0.2),
+  inset -1px -1px 3px 0 rgba(255, 255, 255, 0.5);
+}
+
+.neumorphic:active {
   box-shadow: 0px 0px 0px 0 rgba(0, 0, 0, 0.2),
   0px 0px 0px 0 rgba(255, 255, 255, 0.5),
   inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
