--- a/UI/WebUI/style/sp_style.css
+++ b/UI/WebUI/style/sp_style.css
@@ -110,19 +110,25 @@
 
 
 
-.color-online-anim {
+.color-online-anim svg, .color-online-anim span{
   color:#198caf;
-  animation: color-online-anim-key 1s infinite;
+  /* transform: translate3d(0, 0, 0);
+  will-change: transform; */
+  /* animation: color-online-anim-key 1s infinite; */
 }
+
 
 @keyframes color-online-anim-key {
   from {color: #19bcee;}
   to {color: #06315e;}
 }
 
-.color-offline-anim {
+.color-offline-anim svg, .color-offline-anim span
+{
   color:rgb(255, 28, 0);
-  animation: color-offline-anim-key 1s infinite;
+  /* transform: translate3d(0, 0, 0);
+  will-change: transform;
+  animation: color-offline-anim-key 1s infinite; */
 }
 
 @keyframes color-offline-anim-key {
