--- a/UI/WebUI/style/sp_style.css
+++ b/UI/WebUI/style/sp_style.css
@@ -157,11 +157,21 @@
 
 .color-offline-anim svg, .color-offline-anim span
 {
+  color:rgb(255, 179, 0);
+  /* transform: translate3d(0, 0, 0);
+  will-change: transform;
+  animation: color-offline-anim-key 1s infinite; */
+}
+
+
+.color-noresource-offline-anim svg, .color-noresource-offline-anim span
+{
   color:rgb(255, 28, 0);
   /* transform: translate3d(0, 0, 0);
   will-change: transform;
   animation: color-offline-anim-key 1s infinite; */
 }
+
 
 @keyframes color-offline-anim-key {
   from {color: rgb(255, 28, 0);}
