WebUI: UI update & Unused code removal

--- a/UI/WebUI/style/sp_style.css
+++ b/UI/WebUI/style/sp_style.css
@@ -69,7 +69,15 @@
   /* min-height has its purpose :) , unless you meant height*/
 }
 
+.Antd_SubMenu_Title_AutoHeight,.Antd_SubMenu_Title_AutoHeight>div,.Antd_SubMenu_Title_AutoHeight>.ant-menu-submenu-title
+{
+  height:auto !important
+}
+.Antd_Divider_Small_Text_Tight
+{
+  font-size: 14px !important; 
 
+}
 
 .blockS .deepblue{
 
