WebUI: fix file saving UI overflow bug

--- a/UI/WebUI/style/sp_style.css
+++ b/UI/WebUI/style/sp_style.css
@@ -102,6 +102,9 @@
   }
 }
 
+.ant-modal.modal-flex-justify-end .ant-modal-content{
+  justify-content: flex-end;
+}
 
 
 .ant-modal.modal-sizing.size90{
