--- a/UI/WebUI/style/sp_style.css
+++ b/UI/WebUI/style/sp_style.css
@@ -69,7 +69,14 @@
   /* min-height has its purpose :) , unless you meant height*/
 }
 
-.Antd_SubMenu_Title_AutoHeight,.Antd_SubMenu_Title_AutoHeight>div,.Antd_SubMenu_Title_AutoHeight>.ant-menu-submenu-title
+
+
+.Antd_Menu_Title_Padding_Left_small,.Antd_Menu_Title_AutoHeight>div,.Antd_Menu_Title_Padding_Left_small>.ant-menu-submenu-title
+{
+  padding-left: 5px !important
+}
+
+.Antd_Menu_Title_AutoHeight,.Antd_Menu_Title_AutoHeight>div,.Antd_Menu_Title_AutoHeight>.ant-menu-submenu-title
 {
   height:auto !important
 }
