WebUI: SLID UI add big red reset EM_STOP btn to reset emergency stop state

--- a/UI/WebUI/style/sp_style.css
+++ b/UI/WebUI/style/sp_style.css
@@ -99,6 +99,7 @@
 }
 
 .Emergency_Blink {
+  color:#FFF !important;
   animation: DISCONNECT_Blink_ANIMATION 1s infinite;  /* IE 10+, Fx 29+ */
 }
 
