--- a/UI/WebUI2/src/basic.css
+++ b/UI/WebUI2/src/basic.css
@@ -6,7 +6,18 @@
 .overlay {
 	position: absolute;
 	background: none;
+
 }
+
+.HXF {
+	height: 100%;
+}
+
+.scroll {
+	overflow: scroll;
+}
+
+
 
 .antd_menu_item_no_padding{
   padding-left: 0px !important;
